[gd_scene load_steps=34 format=2]

[ext_resource path="res://livingBeing.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Chicken/ChickenSideWalkLeft.png" type="Texture" id=5]
[ext_resource path="res://Chicken/ChickenIdle.png" type="Texture" id=6]
[ext_resource path="res://Chicken/ChickenWalkBack.png" type="Texture" id=7]
[ext_resource path="res://Chicken/ChickenWalk.png" type="Texture" id=8]
[ext_resource path="res://Chicken/ChickenSideWalkRight.png" type="Texture" id=9]
[ext_resource path="res://blood drop.png" type="Texture" id=10]
[ext_resource path="res://Creature Details Background.png" type="Texture" id=11]
[ext_resource path="res://Raleway-Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Detail Display.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Pounce",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=20]

[sub_resource type="DynamicFont" id=21]
size = 22
use_filter = true
extra_spacing_top = 6
extra_spacing_bottom = 6
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 162.872, 245.424 )

[node name="Living Being" type="KinematicBody2D"]
use_parent_material = true
position = Vector2( 366.564, 161.712 )
scale = Vector2( 0.5, 0.5 )
input_pickable = true
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 19 )
animation = "right"
frame = 1
playing = true

[node name="VisionSphere" type="Area2D" parent="."]

[node name="VisionShereCollisionShape" type="CollisionShape2D" parent="VisionSphere"]
shape = SubResource( 20 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
speed_scale = 5.0
texture = ExtResource( 10 )
direction = Vector2( 0, 0 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 10.86
scale_amount = 0.3

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0.872009, -1.42401, 62.872, -1.42401 )
width = 2.0
default_color = Color( 0.968627, 1, 0, 1 )
joint_mode = 1
begin_cap_mode = 1
end_cap_mode = 2
round_precision = 2
antialiased = true

[node name="Detail Display" type="Node2D" parent="."]
visible = false
z_index = 20
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Detail Display"]
texture = ExtResource( 11 )

[node name="Texts" type="Node2D" parent="Detail Display"]
position = Vector2( 0.872009, 20.576 )
__meta__ = {
"_edit_group_": true
}

[node name="Main Text" type="Label" parent="Detail Display/Texts"]
margin_left = -137.128
margin_top = -191.424
margin_right = 135.872
margin_bottom = 168.576
custom_fonts/font = SubResource( 21 )
text = "Health   : 
Hunger : 
Thirst    : 
R. Urge :

Target  : 
Targeted Action: 
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="Detail Display/Texts"]
margin_left = -33.0
margin_top = -177.0
margin_right = 240.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 21 )
text = "100/100
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hunger" type="Label" parent="Detail Display/Texts"]
margin_left = -33.0
margin_top = -135.0
margin_right = 240.0
margin_bottom = -54.0
custom_fonts/font = SubResource( 21 )
text = "100/100
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thirst" type="Label" parent="Detail Display/Texts"]
margin_left = -33.0
margin_top = -93.0
margin_right = 240.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 21 )
text = "100/100
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reproductive Urge" type="Label" parent="Detail Display/Texts"]
margin_left = -35.0
margin_top = -51.0
margin_right = 238.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 21 )
text = "100/100
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="Label" parent="Detail Display/Texts"]
margin_left = -35.0
margin_top = 33.0
margin_right = 238.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 21 )
text = "null
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Targeted Action" type="Label" parent="Detail Display/Texts"]
margin_left = 39.0
margin_top = 75.0
margin_right = 312.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 21 )
text = "null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Detail Display"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detail Display/Area2D"]
shape = SubResource( 22 )
[connection signal="input_event" from="." to="." method="_on_Living_Being_input_event"]
[connection signal="mouse_entered" from="." to="Detail Display" method="_on_Living_Being_mouse_entered"]
[connection signal="mouse_exited" from="Detail Display/Area2D" to="Detail Display" method="_on_Area2D_mouse_exited"]
